--- a/.config
+++ b/.config
@@ -65,7 +65,9 @@ CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-netkeeper-interception=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple-obfs is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin is not set
 CONFIG_PACKAGE_luci-app-serverchan=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
@@ -100,7 +102,6 @@ CONFIG_PACKAGE_smartmontools=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_unzip=y
-CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_xray-geodata=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=1008
