--- a/.config
+++ b/.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_NODEJS_ICU_SMALL=y
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_UnblockNeteaseMusic=y
 # CONFIG_PACKAGE_adbyby is not set
@@ -26,22 +27,24 @@ CONFIG_PACKAGE_kmod-md-raid1=y
 CONFIG_PACKAGE_kmod-md-raid10=y
 CONFIG_PACKAGE_kmod-md-raid456=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-phy-realtek=y
 CONFIG_PACKAGE_kmod-r6040=y
-CONFIG_PACKAGE_kmod-r8168=y
+CONFIG_PACKAGE_kmod-r8169=y
 CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_liblzo=y
-# CONFIG_PACKAGE_libmbedtls is not set
 CONFIG_PACKAGE_libmount=y
+CONFIG_PACKAGE_libnghttp2=y
+CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_lsblk=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=y
@@ -49,6 +52,7 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
 CONFIG_PACKAGE_luci-app-dnsfilter=y
+CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
@@ -59,8 +63,6 @@ CONFIG_PACKAGE_luci-app-serverchan=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server is not set
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
@@ -70,17 +72,16 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-theme-argon-jerrykuku=y
 CONFIG_PACKAGE_luci-theme-atmaterial=y
 CONFIG_PACKAGE_mdadm=y
+CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_parted=y
+CONFIG_PACKAGE_r8169-firmware=y
 CONFIG_PACKAGE_redsocks2=y
-# CONFIG_PACKAGE_shadowsocks-libev-config is not set
 # CONFIG_PACKAGE_shadowsocks-libev-ss-local is not set
 # CONFIG_PACKAGE_shadowsocks-libev-ss-redir is not set
-# CONFIG_PACKAGE_shadowsocks-libev-ss-server is not set
-CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_smartmontools=y
 CONFIG_PACKAGE_ttyd=y
@@ -89,6 +90,5 @@ CONFIG_PACKAGE_xray-geodata=y
 CONFIG_PARTED_READLINE=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_KERNEL_PARTSIZE=64
-# CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_PARTSIZE=960
 CONFIG_UnblockNeteaseMusic_NodeJS=y
