--- a/.config
+++ b/.config
@@ -4,14 +4,18 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_NODEJS_14=y
 CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
 CONFIG_PACKAGE_UnblockNeteaseMusic=y
 # CONFIG_PACKAGE_adbyby is not set
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_dnsforwarder=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_dnsproxy=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipt2socks=y
