--- a/.config
+++ b/.config
@@ -101,7 +101,7 @@ CONFIG_PACKAGE_luci-app-dockerman=y
 
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
-# CONFIG_PACKAGE_adbyby is not set
+# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 CONFIG_PACKAGE_luci-app-dnsfilter=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-mwan3=y
