--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -165,7 +165,7 @@ jobs:
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d")"
         touch release.txt
 #        [ $UPLOAD_COWTRANSFER = true ] && echo "🍀 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
-        [ $UPLOAD_WETRANSFER = true ] && echo "🌺 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
+#        [ $UPLOAD_WETRANSFER = true ] && echo "🌺 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
 
     - name: Upload firmware to release
