--- a/.config
+++ b/.config
@@ -85,7 +85,7 @@ CONFIG_PACKAGE_luci-app-fileassistant=y
 CONFIG_PACKAGE_luci-app-filebrowser=y
 
 
-
+# CONFIG_PACKAGE_luci-app-turboacc is not set
 
 
 CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
